--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,7 @@
-<h1>O'Herin/Howe</h1>
-<h2> Breast Milk Database - Home</h2>
-<h4> Menu of operations</h4>
+<div class="container-fluid">
+
+
+<h4> Menu of Operations</h4>
 <ul>
     <li>
         <a href='/user'>
@@ -31,5 +32,6 @@
 
 <a href="https://tinyurl.com/ya6dxcce"><b>Click here to see our website mapped to the grading rubric.</b></a>
 
+</div>
 
 
