--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,43 @@
 <!doctype html>
 <html>
+
 <head>
+
+
 	<title>O'Herin/Howe CS340-400</title>
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="http://flip1.engr.oregonstate.edu:9090/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	{{#each jsscripts}}
 	<script src="{{this}}"></script>
 	{{/each}}
 </head>
 <body>
-	{{{body}}}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        
+        <a class="navbar-brand" href="/">O'Herin/Howe - Breast Milk Database</a>
+        
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/user">Users</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/merchant">Merchants</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/listing">Listings</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/review">Reviews</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/helpful">Helpful</a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
+    {{{body}}}
 </body>
 </html>
