--- a/views/updatelisting.handlebars
+++ b/views/updatelisting.handlebars
@@ -1,40 +1,44 @@
-﻿<h1><a href="/">Home</a></h1>
-<h1>Update {{listing.listing_title}}:</h1>
-<form id="updatelisting" action="/listing" method="post">
-    Listing Name: <input id="listing-name" type="text" name="listing_title" value="{{listing.listing_title}}" required /><br>
-    Amount (oz): <input id="listing-amount" type="number" step=".1" min="0" name="amount" value="{{listing.amount}}" required /><br>
-    Price (USD): <input id="listing-price" type="number" step=".01" min="0" name="price" value="{{listing.price}}" required /><br>
-    Dairy Free:
-    {{#if listing.dairy_free}}
-    <input type="radio" name="dairy_free" value="1" checked />Yes
-    <input type="radio" name="dairy_free" value="0" />No<br />
-    {{else}}
-    <input type="radio" name="dairy_free" value="1" />Yes
-    <input type="radio" name="dairy_free" value="0" checked />No<br />
-    {{/if}}
-    Frozen: {{frozen}}
-    {{#if listing.frozen}}
-    <input type="radio" name="frozen" value="1" checked />Yes
-    <input type="radio" name="frozen" value="0" />No<br />
-    {{else}}
-    <input type="radio" name="frozen" value="1" />Yes
-    <input type="radio" name="frozen" value="0" checked />No<br />
-    {{/if}}
-    Start date: <input id="start-date" type="date" name="date_start" value="{{listing.date_start}}" /><br>
-    End date: <input id="end-date" type="date" name="date_end" value="{{listing.date_end}}" /><br>
-    Active:
-    {{#if listing.active}}
-    <input type="radio" name="active" value="1" checked />Yes
-    <input type="radio" name="active" value="0" />No<br />
-    {{else}}
-    <input type="radio" name="active" value="1" />Yes
-    <input type="radio" name="active" value="0" checked />No<br />
-    {{/if}}
-    Shop Name: {{listing.shop_name}}<br />
-</form>
-<button onclick="updateListing({{listing.lid}})">Update</button><button type="cancel" onclick="javascript:window.location='./';">Cancel</button>
-<br>
-<p>Note: A listing has full participation with a merchant (shop). The 1-to-M relationship<br>
-cannot be added or removed (entities cannot be associated or disassociated) independent of<br>
-creating or deleting a listing. Please visit the <a href="/listing">Listings page</a> to add a listing<br>
-and link it to a shop, or delete the listing and remove the relationship. Piazza @195 @200.</p>
+﻿<div class="container-fluid">
+
+    <h1>Update {{listing.listing_title}}:</h1>
+    <form id="updatelisting" action="/listing" method="post">
+        Listing Name: <input id="listing-name" type="text" name="listing_title" value="{{listing.listing_title}}" required /><br>
+        Amount (oz): <input id="listing-amount" type="number" step=".1" min="0" name="amount" value="{{listing.amount}}" required /><br>
+        Price (USD): <input id="listing-price" type="number" step=".01" min="0" name="price" value="{{listing.price}}" required /><br>
+        Dairy Free:
+        {{#if listing.dairy_free}}
+        <input type="radio" name="dairy_free" value="1" checked />Yes
+        <input type="radio" name="dairy_free" value="0" />No<br />
+        {{else}}
+        <input type="radio" name="dairy_free" value="1" />Yes
+        <input type="radio" name="dairy_free" value="0" checked />No<br />
+        {{/if}}
+        Frozen: {{frozen}}
+        {{#if listing.frozen}}
+        <input type="radio" name="frozen" value="1" checked />Yes
+        <input type="radio" name="frozen" value="0" />No<br />
+        {{else}}
+        <input type="radio" name="frozen" value="1" />Yes
+        <input type="radio" name="frozen" value="0" checked />No<br />
+        {{/if}}
+        Start date: <input id="start-date" type="date" name="date_start" value="{{listing.date_start}}" /><br>
+        End date: <input id="end-date" type="date" name="date_end" value="{{listing.date_end}}" /><br>
+        Active:
+        {{#if listing.active}}
+        <input type="radio" name="active" value="1" checked />Yes
+        <input type="radio" name="active" value="0" />No<br />
+        {{else}}
+        <input type="radio" name="active" value="1" />Yes
+        <input type="radio" name="active" value="0" checked />No<br />
+        {{/if}}
+        Shop Name: {{listing.shop_name}}<br />
+    </form>
+    <button onclick="updateListing({{listing.lid}})">Update</button><button type="cancel" onclick="javascript:window.location='./';">Cancel</button>
+    <br>
+    <p>
+        Note: A listing has full participation with a merchant (shop). The 1-to-M relationship<br>
+        cannot be added or removed (entities cannot be associated or disassociated) independent of<br>
+        creating or deleting a listing. Please visit the <a href="/listing">Listings page</a> to add a listing<br>
+        and link it to a shop, or delete the listing and remove the relationship. Piazza @195 @200.
+    </p>
+</div>
